Make headings response to prevent overflowing
Otherwise we have x-axis scroll on mobile, which looks ugly

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+.heading {
+  font-size: 4.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+  .heading {
+    font-size: 4rem;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .heading {
+    font-size: 3rem;
+  }
+}
+
 input[type="radio"] {
   background-color: transparent;
   border: .0625em solid #0080ff;
